# wagtail_simple_blog

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  apps.json  manage.py  release.sh  setup.cfg
apps/: urls.py
apps/auth/: contexts.py  models.py
apps/auth/migrations/: 0001_initial.py  0002_websettings.py  0003_websettings_organization_name.py
apps/home/: models.py
apps/home/migrations/: 0001_initial.py  0002_create_homepage.py  0003_add_extrafields_to_home.py  0004_auto_20211224_1123.py  0005_auto_20211224_1623.py
apps/home/templates/: base.html  home.html  layout.html
apps/home/templates/components/: footer.html  navbar.html
apps/home/templates/simpleblog/: series.html
apps/themes/static/themes/css/: style.css
apps/themes/templates/: base.html  layout.html  meta.html
apps/themes/templates/components/: footer.html  navbar.html
apps/themes/templates/simpleblog/: base.html
example/: urls.py  wsgi.py
example/home/: models.py
example/home/migrations/: 0003_auto_20211223_1134.py  0003_news_newsindex.py  0004_auto_20211223_0304.py  0004_homepage_contents.py  0005_auto_20211223_0606.py  0005_auto_20211223_1156.py  0006_rename_homepage_home.py
example/home/templates/home/: home.html  news.html  news_index.html  series.html
example/settings/: base.py  dev.py  production.py
example/templates/: base.html
simple_blog/: __init__.py  apps.py  blocks.py  models.py  settings.py  utils.py  version.py  views.py
simple_blog/migrations/: 0001_initial.py  0002_auto_20211221_1600.py  0002_auto_20211223_1103.py  0003_delete_seriesitem.py  0003_index_contents.py  0004_auto_20211223_0304.py  0005_auto_20211223_0606.py
simple_blog/static/simple_blog/css/: blog.css
simple_blog/static/simple_blog/js/plugins/: gist.min.js:Zone.Identifier  mermaid.min.js
simple_blog/templates/components/: categories_list.html  comments.html  post_list.html  post_list_item.html  social_share.html  tags_list.html
simple_blog/templates/simple_blog/: base.html  blog.html  category.html  content.html  index.html  page.html  post.html  search.html  series.html  tag.html
simple_blog/templates/streamblocks/: diagram_block.html  gallery_block.html  gist_block.html  image_block.html  oembed_block.html  pagecard_block.html  pagelist_block.html
simple_blog/templatetags/: simpleblog_tags.py
simpleblog/: __init__.py  apps.py  blocks.py  models.py  settings.py  version.py  views.py
simpleblog/management/commands/: createblogadmin.py
simpleblog/migrations/: 0001_initial.py  0002_auto_20211224_1123.py  0003_auto_20211224_1623.py
simpleblog/static/simpleblog/css/: blog.css  bootstrap.min.css
simpleblog/static/simpleblog/js/: blog.js
simpleblog/static/simpleblog/js/plugins/: highlight.min.js  mermaid.min.js:Zone.Identifier
simpleblog/templates/: base.html
simpleblog/templates/components/: categories_list.html  comments.html  pagination.html  post_list.html  post_list_item.html  post_type_list.html
simpleblog/templates/simpleblog/: base.html  category.html  content.html  index.html  page.html  post.html  search.html  tag.html
simpleblog/templates/streamblocks/: code_block.html  gallery_block.html  image_block.html  pagelist_block.html  post_block.html  quote_block.html  richtext_block.html  table_block.html
simpleblog/templatetags/: simpleblog_tags.py
