[metadata]
name = wagtail_simpleblog
version = attr: simpleblog.__version__
url = https://github.com/realnoobs/wagtail_simpleblog
author = Rizki Sasri Dwitama
author_email = sasri.project@gmail.com
description = Wagtail Simple Blog
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
project_urls =
    Documentation = https://github.com/realnoobs/wagtail_simpleblog
    Source = https://github.com/realnoobs/wagtail_simpleblog

[options]
python_requires = >=3.6
packages = simpleblog
include_package_data = true
zip_safe = false
install_requires =
    wagtail>=2.15,<2.16
    django-mptt>=0.13.4
    django-social-share>=2.2.1
[options.entry_points]

[options.extras_require]

[bdist_rpm]

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601,W503
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = simpleblog
line_length = 119
multi_line_output = 5
